[package]
name = "hope"
version = "0.1.0"
edition = "2024"

[dependencies]
bluest = "0.6.9"
eframe = "0.33.3"
egui = "0.33.3"
egui-selectable-table = "0.5.0"
egui_extras = "0.33.3"
egui_inbox = "0.10.0"
flume = { version="0.12.0", features=["async"]}
futures-lite = "2.6.1"
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
